Your commit message here

--- a/index.html
+++ b/index.html
@@ -30,6 +30,25 @@
 
 
         <li class="nav-item">
+          <a href="#" onclick="showPage('aboutPage'); return false;">
+            <i class="fas fa-compass"></i>
+            <span>Strategy</span>
+          </a>
+
+          <!-- <i class="fas fa-chess"></i>      
+          <i class="fas fa-chess-knight"></i> 
+          <i class="fas fa-compass"></i>    
+          <i class="fas fa-lightbulb"></i>  -->
+
+
+          <li class="nav-item">
+            <a href="#" onclick="showPage('aboutPage'); return false;">
+              <i class="fas fa-check-circle"></i>
+              <span>Services </span>
+            </a>
+  
+
+        <li class="nav-item">
           <a href="#" onclick="toggleSubmenu(this); return false;">
             <i class="fas fa-folder-open"></i>
             <span>Projects</span>
@@ -80,6 +99,22 @@
               <span>Prototypes</span>
               <span class="badge" id="badge-prototypes">0</span>
             </a>
+          </div>
+        </li>
+
+
+
+        <li class="nav-item">
+          <a href="#" onclick="toggleSubmenu(this); showPage('settingsPage'); return false;">
+            <i class="fas fa-box"></i>
+            <span>Resources</span>
+            <i class="fas fa-chevron-down chevron"></i>
+          </a>
+          <div class="submenu">
+            <a href="#"><span>Sites we like</span></a>
+            <a href="#"><span>Feeds</span></a>
+            <a href="#"><span>Papers</span></a>
+            <a href="#"><span>Articles</span></a>
           </div>
         </li>
 
@@ -253,3 +288,11 @@
   </div>
 </body>
 </html>
+
+
+
+
+
+
+
+
