--- a/index_backup.html
+++ b/index_backup.html
@@ -34,8 +34,19 @@
             <i class="fas fa-compass"></i>
             <span>Strategy</span>
           </a>
-        </li>  <!-- properly closed -->
 
+          <!-- <i class="fas fa-chess"></i>      
+          <i class="fas fa-chess-knight"></i> 
+          <i class="fas fa-compass"></i>    
+          <i class="fas fa-lightbulb"></i>  -->
+
+
+          <!-- <li class="nav-item">
+            <a href="#" onclick="showPage('aboutPage'); return false;">
+              <i class="fas fa-check-circle"></i>
+              <span>Services </span>
+            </a> -->
+  
 
 
             <li class="nav-item">
@@ -50,10 +61,17 @@
                 <a href="#"><span>DataOps</span></a>
                 <a href="#"><span>AIOps</span></a>
                 <a href="#"><span>Investigative</span></a>
-                <a href="#"><span>Thematic</span></a>
+                <a href="#"><span>Thenatic</span></a>
                 <a href="#"><span>Briefing Types</span></a>
               </div>
             </li>
+
+
+
+
+
+
+
 
 
 
@@ -62,32 +80,20 @@
                 <i class="fas fa-chalkboard"></i>
                 <span>Briefings </span>
               </a>
-            </li>
+
+
               <li class="nav-item">
                 <a href="#" onclick="showPage('aboutPage'); return false;">
                   <i class="fas fa-clipboard"></i>
                   <span>Plans </span>
                 </a>
-              </li>
+
+
                 <li class="nav-item">
                   <a href="#" onclick="showPage('aboutPage'); return false;">
                     <i class="fas fa-code-branch"></i>
                     <span>.ipynb </span>
                   </a>
-                </li>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -147,10 +153,6 @@
               <span>Templates</span>
               <span class="badge" id="badge-templates">0</span>
             </a>
-            <!-- <a href="#" onclick="showPage('projectsModellingPage'); return false;">
-              <span>Modelling</span>
-              <span class="badge" id="badge-modelling">0</span>
-            </a> -->
           </div>
         </li>
 
@@ -191,7 +193,7 @@
             <i class="fas fa-info-circle"></i>
             <span>About</span>
           </a>
-        </li>
+
 
         <li class="nav-item">
           <a href="#" onclick="toggleSubmenu(this); return false;">
@@ -270,15 +272,6 @@
         <div class="project-list"></div>
       </div>
 
-      <!-- <div class="page" id="projectsModellingPage" style="display: none;">
-        <h2>Modelling</h2>
-        <div class="project-list"></div>
-      </div> -->
-      
-
-
-
-
 
     </main>
 
@@ -332,37 +325,9 @@
       <p>This is placeholder content for the About Page.</p>
     </div>
 
-    <!-- STRATEGY PAGE (REVISED) -->
     <div class="page centered-page" id="strategyPage" style="display: none;">
-      <div style="max-width: 900px; padding: 20px; text-align: left; background: #f9f9f9; border-radius: 6px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
-        <h2 style="font-size: 2rem; margin-bottom: 1rem; text-align: center;">Strategy Page</h2>
-        <p style="font-size: 1.1rem; margin-bottom: 2rem; color: #333;">
-          Welcome to the Strategy Page. Below are key focuses that define our strategic direction.
-        </p>
-        <div style="display: flex; flex-wrap: wrap; gap: 1rem;">
-          <div style="flex: 1 1 calc(33.333% - 1rem); min-width: 250px; background: #fff; border-radius: 5px; padding: 1rem; box-shadow: 0 0 5px rgba(0,0,0,0.1);">
-            <h3 style="margin-bottom: 0.5rem; font-size: 1.2rem;">Objective 1</h3>
-            <p style="margin-bottom: 1rem;">A high-level strategic focus for guiding development and growth.</p>
-            <button style="display: inline-block; background: #007bff; color: #fff; border: none; border-radius: 3px; padding: 0.5rem 1rem; cursor: pointer;">
-              Learn More
-            </button>
-          </div>
-          <div style="flex: 1 1 calc(33.333% - 1rem); min-width: 250px; background: #fff; border-radius: 5px; padding: 1rem; box-shadow: 0 0 5px rgba(0,0,0,0.1);">
-            <h3 style="margin-bottom: 0.5rem; font-size: 1.2rem;">Objective 2</h3>
-            <p style="margin-bottom: 1rem;">Strengthen our offerings and align with emerging market needs.</p>
-            <button style="display: inline-block; background: #007bff; color: #fff; border: none; border-radius: 3px; padding: 0.5rem 1rem; cursor: pointer;">
-              Learn More
-            </button>
-          </div>
-          <div style="flex: 1 1 calc(33.333% - 1rem); min-width: 250px; background: #fff; border-radius: 5px; padding: 1rem; box-shadow: 0 0 5px rgba(0,0,0,0.1);">
-            <h3 style="margin-bottom: 0.5rem; font-size: 1.2rem;">Objective 3</h3>
-            <p style="margin-bottom: 1rem;">Expand outreach, partnerships, and brand presence for broader impact.</p>
-            <button style="display: inline-block; background: #007bff; color: #fff; border: none; border-radius: 3px; padding: 0.5rem 1rem; cursor: pointer;">
-              Learn More
-            </button>
-          </div>
-        </div>
-      </div>
+      <h2>Strategy Page</h2>
+      <p>This is placeholder content for the Strategy Page.</p>
     </div>
 
     <div class="page centered-page" id="themePage" style="display: none;">
@@ -377,7 +342,7 @@
   <!-- Main script -->
   <script src="script.js"></script>
 
-  <!-- JSPDF and docx libs -->
+  JSPDF and docx libs
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://unpkg.com/docx@7.8.2/build/index.js"></script>
 
@@ -389,3 +354,11 @@
   </div>
 </body>
 </html>
+
+
+
+
+
+
+
+
